# bjy

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
lib/drawingAssociation/: CMakeLists.txt
lib/drawingAssociation/src/: RWJsonFile.cpp  RWJsonFile.h  axisProcessInfo.cpp  axisProcessInfo.h  beamInfo.cpp  beamInfo.h  columnInfo.cpp  columnInfo.h  columnProcessInfo.cpp  columnProcessInfo.h  coordinateSystem.cpp  coordinateSystem.h  dataIntegration.cpp  dataIntegration.h  drawing.cpp  drawing.h  wallInfo.cpp  wallInfo.h  wallProcessInfo.cpp  wallProcessInfo.h
lib/jsoncpp/: CMakeLists.txt
lib/libdxfrw/: CMakeLists.txt
lib/libdxfrw/src/: drw_base.cpp  drw_base.h  drw_classes.cpp  drw_classes.h  drw_color.cpp  drw_color.h  drw_entities.cpp  drw_entities.h  drw_header.cpp  drw_header.h  drw_interface.h  drw_objects.cpp  drw_objects.h  libdwgr.cpp  libdwgr.h  libdxfrw.cpp  libdxfrw.h
lib/libdxfrw/src/intern/: drw_dbg.cpp  drw_dbg.h  drw_textcodec.cpp  drw_textcodec.h  dwgbuffer.cpp  dwgbuffer.h  dwgreader.cpp  dwgreader.h  dwgreader15.cpp  dwgreader15.h  dwgreader18.cpp  dwgreader18.h  dwgreader21.cpp  dwgreader21.h  dwgreader24.cpp  dwgreader24.h  dwgreader27.cpp  dwgreader27.h  dwgreader32.cpp  dwgreader32.h  dwgutil.cpp  dwgutil.h  dxfreader.cpp  dxfreader.h  dxfwriter.cpp  dxfwriter.h
lib/parser/: CMakeLists.txt
lib/parser/interface/: RTree.h  headerFile.h  parser.cpp  parser.h  transer.cpp  transer.h
lib/parser/utils/base/: axis.cpp  axis.h  axisSet.cpp  axisSet.h  block.cpp  block.h  blockSet.cpp  blockSet.h  border.cpp  border.h  borderSet.cpp  borderSet.h  box.cpp  box.h  circle.cpp  circle.h  common.h  component.cpp  component.h  corner.cpp  corner.h  dimension.cpp  dimension.h  dimensions.cpp  dimensions.h  kdt.h  line.cpp  line.h  log.cpp  log.h  point.cpp  point.h  sectionSymbol.cpp  sectionSymbol.h  sectionSymbolSet.cpp  sectionSymbolSet.h  signal.h  table.cpp  table.h  transform.cpp  (+1 more)
lib/parser/utils/beam/: beam.cpp  beam.h  beamLongitudinal.cpp  beamLongitudinal.h  beamLongitudinalSet.cpp  beamLongitudinalSet.h  beamSection.cpp  beamSection.h  beamSectionSet.cpp  beamSectionSet.h  beamSet.cpp  beamSet.h
lib/parser/utils/column/: ColumnSection.cpp  ColumnSection.h  ColumnSectionSet.cpp  ColumnSectionSet.h  pillar.cpp  pillar.h  pillarSet.cpp  pillarSet.h
lib/parser/utils/floor/: floorPlan.cpp  floorPlan.h
lib/parser/utils/profile/: elevationSymbol.cpp  elevationSymbol.h  elevationSymbolSet.cpp  elevationSymbolSet.h  longitudinalStructProfile.cpp  longitudinalStructProfile.h  mainStructureSection.cpp  mainStructureSection.h
lib/parser/utils/public/: data.cpp  data.h  publicFunction.cpp  publicFunction.h
lib/parser/utils/wall/: wallLocation.cpp  wallLocation.h  wallLocationSet.cpp  wallLocationSet.h  wallSection.cpp  wallSection.h  wallSectionSet.cpp  wallSectionSet.h
lib/spdlog/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/spdlog/src/: fmt.cpp
projectJsonFile/: clue - 副本.json  clue.json
projectJsonFile/drawing/floorPlan/bottomFloor/15010071166515797111197613247870316710/: result.json
projectJsonFile/drawing/floorPlan/bottomFloor/670797887861368419544534456861331/: result.json
projectJsonFile/drawing/floorPlan/bottomFloor/711106018991431168787540120117610692141/: result.json
projectJsonFile/drawing/floorPlan/bottomFloor/75875060052411188473495487731356716/: result.json
projectJsonFile/drawing/floorPlan/bottomFloor/926718409616702141668089118250408539/: result.json
projectJsonFile/drawing/floorPlan/bottomFloor/96600944158453503416431738713648266/: result.json
projectJsonFile/drawing/floorPlan/middleFloor/481699112635481547999982799633252/: result.json
projectJsonFile/drawing/floorPlan/middleFloor/5568757852943569847885117805424147/: result.json
projectJsonFile/drawing/floorPlan/middleFloor/731367111102526548191002731146208616810/: result.json
projectJsonFile/drawing/floorPlan/topFloor/0725360307186112909413491669519139431/: result.json
projectJsonFile/drawing/floorPlan/topFloor/6836135452031595883916319966228616/: result.json
projectJsonFile/drawing/floorPlan/topFloor/87317141203401471184032631316411069609/: result.json
projectJsonFile/resultData/axis/: coordinateSystem.json  impeachAxis.json
projectJsonFile/resultData/column/bottomFloor/: columnLocation.json  impeachColumn.json
projectJsonFile/resultData/column/middleFloor/: columnLocation.json  impeachColumn.json
projectJsonFile/resultData/column/topFloor/: columnLocation.json  impeachColumn.json
viewer/: Drawing.cpp  Drawing.h  DrawingView.cpp  DrawingView.h  Project.cpp  Project.h  Viewer.aps  Viewer.cpp  Viewer.rc  ViewerDlg.cpp  ViewerDlg.h  resource.h
